Created Database helper to use SQlite and store user data on the device

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,4 +71,11 @@
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_editor_absoluteY="151dp" />
 
+    <ListView
+        android:id="@+id/placesListView"
+        android:layout_width="263dp"
+        android:layout_height="260dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="243dp" />
+
 </android.support.constraint.ConstraintLayout>
