--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,30 +50,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/autocomplete_fragment" />
 
-            <TextView
-                android:id="@+id/locationMain"
+            <fragment
+                android:id="@+id/locationFrag"
+                android:name="com.example.n3023685.gpspractice.ReceiverFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center"
-                app:layout_constraintBottom_toTopOf="@+id/locationSub"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/weatherBox" />
+                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/locationSub"
+            <fragment
+                android:id="@+id/infoFrag"
+                android:name="com.example.n3023685.gpspractice.ReceiverFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textAlignment="center"
-                app:layout_constraintBottom_toTopOf="@+id/textView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/locationMain" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textView"
@@ -121,6 +108,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/placesListView"
                 tools:text="Go!" />
+
         </LinearLayout>
     </ScrollView>
 
