Streamlined permission checks Modified error landing pages Removed additional landing page Resized UI components First pass of code comments
TODO
Check code comments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,38 +6,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.n3023685.androidica.MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ProgressBar
-            android:id="@+id/placesLoadedProgressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </RelativeLayout>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <fragment
@@ -95,7 +76,7 @@
             <ListView
                 android:id="@+id/placesListView"
                 android:layout_width="match_parent"
-                android:layout_height="249dp"
+                android:layout_height="220dp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintBottom_toTopOf="@+id/sendButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,16 +97,15 @@
                 android:id="@+id/sendButton"
                 android:layout_width="match_parent"
                 android:layout_height="101dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
                 android:onClick="sendMessage"
                 android:text="@string/button_send"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/placesListView"
-                tools:text="Go!" />
+                app:layout_constraintTop_toBottomOf="@+id/placesListView" />
 
         </LinearLayout>
     </ScrollView>
